2018-02-14  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import autosp-2018-02-14
	configure.ac: Adapted.

2017-12-30  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import autosp-2017-12-26
	configure.ac: Adapted.

2017-07-26  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import autosp-2017-07-14
	configure.ac: Adapted.

2017-07-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import autosp-2017-06-21
	configure.ac: Adapted.

2017-04-07  Norbert Preining  <norbert@preining.info>

	* Import autosp-2017-04-06
	configure.ac: Adapted.

2017-03-27  Karl Berry  <karl@freefriends.org>

	* Makefile.am (AM_TESTS_ENVIRONMENT): use instead of TESTS_ENVIRONMENT.
	* autosp.test: adapt.

2017-02-28  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import autosp-2016-11-02.
	configure.ac: Adapted.

2016-03-07  Karl Berry  <karl@tug.org>

	* Initial import of autosp-2016-01-30 to TL.


Copyright 2016-2017 Karl Berry <tex-live@tug.org>
You may freely use, modify and/or distribute this file.